cluster/skydive/skydive.yaml
apiVersion: v1
kind: Service
metadata:
  name: skydive-analyzer
  labels:
    app: skydive-analyzer
spec:
  type: NodePort
  ports:
  - port: 8082
    name: api
  - port: 8082
    name: protobuf
    protocol: UDP
  - port: 12379
    name: etcd
  - port: 12380
    name: etcd-cluster
  - port: 9200
    name: es
  selector:
    app: skydive
    tier: analyzer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skydive-analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: skydive
      tier: analyzer
  template:
    metadata:
      labels:
        app: skydive
        tier: analyzer
    spec:
      serviceAccountName: skydive-service-account
      containers:
      - name: skydive-analyzer
        image: skydive/skydive
        args:
        - analyzer
        ports:
        - containerPort: 8082
        - containerPort: 8082
          protocol: UDP
        - containerPort: 12379
        - containerPort: 12380
        readinessProbe:
          httpGet:
            port: 8082
            path: /api/status
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            port: 8082
            path: /api/status
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 10
      - name: skydive-elasticsearch
        image: elasticsearch:7.8.0
        ports:
        - containerPort: 9200
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: skydive-agent
spec:
  selector:
    matchLabels:
      app: skydive
      tier: agent
  template:
    metadata:
      labels:
        app: skydive
        tier: agent
    spec:
      hostNetwork: true
      hostPID: true
      containers:
      - name: skydive-agent
        image: skydive/skydive
        args:
        - agent
        - --listen=0.0.0.0:8081
        ports:
        - containerPort: 8081
        readinessProbe:
          httpGet:
            port: 8081
            path: /api/status
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            port: 8081
            path: /api/status
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 10
        securityContext:
          privileged: true
        volumeMounts:
        - name: docker
          mountPath: /var/run/docker.sock
        - name: run
          mountPath: /host/run
        - name: ovsdb
          mountPath: /var/run/openvswitch/db.sock
        - name: runc
          mountPath: /var/run/runc
        - name: runc-ctrs
          mountPath: /var/run/runc-ctrs
        - name: containerd-runc
          mountPath: /var/run/containerd/runc
        - name: data-kubelet
          mountPath: /var/data/kubelet
        - name: lib-kubelet
          mountPath: /var/lib/kubelet
      volumes:
      - name: docker
        hostPath:
          path: /var/run/docker.sock
      - name: run
        hostPath:
          path: /var/run/netns
      - name: ovsdb
        hostPath:
          path: /var/run/openvswitch/db.sock
      - name: runc
        hostPath:
          path: /var/run/runc
      - name: runc-ctrs
        hostPath:
          path: /var/run/runc-ctrs
      - name: containerd-runc
        hostPath:
          path: /var/run/containerd/runc
      - name: data-kubelet
        hostPath:
          path: /var/data/kubelet
      - name: lib-kubelet
        hostPath:
          path: /var/lib/kubelet
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skydive-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: skydive.homelab.local
    http:
      paths:
      - backend:
          service:
            name: skydive-analyzer
            port:
              number: 8082
        path: /
        pathType: Prefix
